# dark-chess

./: .gitignore  README.md  pyproject.toml
dark_chess/envs/: __init__.py  dark_chess.py  wrappers.py
examples/: enjoy.sh  train.sh
scripts/: enjoy.py  inference.py  test.py  train.py
