[project]
name = "dark-chess"
version = "0.1.0"
description = "Dark chess environment"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "yunik1004", email = "inkyuhak@gmail.com" },
]
dependencies = [
    "cairosvg>=2.7.1",
    "chess>=1.11.1",
    "open-spiel>=1.4",
    "pettingzoo>=1.24.3",
    "sb3-contrib>=2.4.0",
    "shimmy[open-spiel]>=2.0.0",
    "stable-baselines3>=2.4.1",
    "torch>=2.0,<=2.4",
]

[dependency-groups]
dev = [
    "imageio[ffmpeg]>=2.35.1",
    "lightning>=2.3.3",
    "ruff>=0.9.2",
]

[tool.setuptools]
packages = ["dark_chess"]
