[project]
name = "dark-chess"
version = "0.1.0"
description = "Dark chess environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "yunik1004", email = "inkyuhak@gmail.com" },
]
dependencies = [
    "cairosvg>=2.7.1",
    "chess>=1.11.1",
    "imageio[ffmpeg]>=2.35.1",
    "open-spiel>=1.5",
    "pettingzoo>=1.24.3",
    "sb3-contrib>=2.4.0",
    "shimmy[open-spiel]>=2.0.0",
    "torch>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[tool.setuptools]
packages = ["dark_chess"]
